--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Documentation of libs
 <li><a href=Utils/Architectures.html>Utils/Architectures.pm</a></li>
 <li><a href=Utils/Backends.html>Utils/Backends.pm</a></li>
 <li><a href=Utils/Firewalld.html>Utils/Firewalld.pm</a></li>
+<li><a href=Utils/Logging.html>Utils/Logging.pm</a></li>
 <li><a href=Utils/Systemd.html>Utils/Systemd.pm</a></li>
 <li><a href=YaST/Module.html>YaST/Module.pm</a></li>
 <li><a href=YaST/NetworkSettings/AbstractNetworkSettingsController.html>YaST/NetworkSettings/AbstractNetworkSettingsController.pm</a></li>
@@ -94,6 +95,7 @@ Documentation of libs
 <li><a href=publiccloud/k8sbasetest.html>publiccloud/k8sbasetest.pm</a></li>
 <li><a href=publiccloud/provider.html>publiccloud/provider.pm</a></li>
 <li><a href=publiccloud/utils.html>publiccloud/utils.pm</a></li>
+<li><a href=qesapdeployment.html>qesapdeployment.pm</a></li>
 <li><a href=rear.html>rear.pm</a></li>
 <li><a href=registration.html>registration.pm</a></li>
 <li><a href=repo_tools.html>repo_tools.pm</a></li>
@@ -108,6 +110,7 @@ Documentation of libs
 <li><a href=suseconnect_register.html>suseconnect_register.pm</a></li>
 <li><a href=susedistribution.html>susedistribution.pm</a></li>
 <li><a href=thunderbird_common.html>thunderbird_common.pm</a></li>
+<li><a href=transactional.html>transactional.pm</a></li>
 <li><a href=trento.html>trento.pm</a></li>
 <li><a href=utils.html>utils.pm</a></li>
 <li><a href=validate_encrypt_utils.html>validate_encrypt_utils.pm</a></li>
