--- a/trento.html
+++ b/trento.html
@@ -19,17 +19,27 @@
     <ul>
       <li><a href="#Methods">Methods</a>
         <ul>
+          <li><a href="#get_trento_deployment">get_trento_deployment</a></li>
           <li><a href="#get_resource_group">get_resource_group</a></li>
+          <li><a href="#get_qesap_resource_group">get_qesap_resource_group</a></li>
+          <li><a href="#config_cluster">config_cluster</a></li>
+          <li><a href="#deploy_vm">deploy_vm</a></li>
+          <li><a href="#deploy_qesap">deploy_qesap</a></li>
+          <li><a href="#destroy_qesap">destroy_qesap</a></li>
           <li><a href="#get_vm_name">get_vm_name</a></li>
           <li><a href="#get_acr_name">get_acr_name</a></li>
-          <li><a href="#az_get_vm_ip">az_get_vm_ip</a></li>
+          <li><a href="#get_trento_ip">get_trento_ip</a></li>
+          <li><a href="#get_vnet">get_vnet</a></li>
+          <li><a href="#get_trento_password">get_trento_password</a></li>
           <li><a href="#az_delete_group">az_delete_group</a></li>
           <li><a href="#az_vm_ssh_cmd">az_vm_ssh_cmd</a></li>
+          <li><a href="#install_agent">install_agent</a></li>
           <li><a href="#k8s_logs">k8s_logs</a></li>
           <li><a href="#podman_self_check">podman_self_check</a></li>
           <li><a href="#cypress_install_container">cypress_install_container</a></li>
           <li><a href="#cypress_log_upload">cypress_log_upload</a></li>
           <li><a href="#cypress_exec">cypress_exec</a></li>
+          <li><a href="#cypress_exec1">cypress_exec</a></li>
           <li><a href="#cypress_test_exec">cypress_test_exec</a></li>
         </ul>
       </li>
@@ -43,7 +53,7 @@
 
 <h1 id="COPYRIGHT">COPYRIGHT</h1>
 
-<p>Copyright 2017-2020 SUSE LLC SPDX-License-Identifier: FSFAP</p>
+<p>Copyright 2022 SUSE LLC SPDX-License-Identifier: FSFAP</p>
 
 <h1 id="AUTHORS">AUTHORS</h1>
 
@@ -55,9 +65,31 @@
 
 <h2 id="Methods">Methods</h2>
 
+<h3 id="get_trento_deployment">get_trento_deployment</h3>
+
+<p>Get the set of scripts for the Trento deployment</p>
+
 <h3 id="get_resource_group">get_resource_group</h3>
 
 <p>Return a string to be used as cloud resource group. It contains the JobId</p>
+
+<h3 id="get_qesap_resource_group">get_qesap_resource_group</h3>
+
+<p>Query and return the resource group used by the qe-sap-deployment</p>
+
+<h3 id="config_cluster">config_cluster</h3>
+
+<h3 id="deploy_vm">deploy_vm</h3>
+
+<p>Deploy the main VM for the Trento application Based on 00.040-trento_vm_server_deploy_azure.sh</p>
+
+<h3 id="deploy_qesap">deploy_qesap</h3>
+
+<p>Deploy a SAP Landscape using a previously configured qe-sap-deployment</p>
+
+<h3 id="destroy_qesap">destroy_qesap</h3>
+
+<p>Destroy the qe-sap-deployment SAP Landscape</p>
 
 <h3 id="get_vm_name">get_vm_name</h3>
 
@@ -67,9 +99,17 @@
 
 <p>Return a string to be used as cloud ACR name. It contains the JobId</p>
 
-<h3 id="az_get_vm_ip">az_get_vm_ip</h3>
+<h3 id="get_trento_ip">get_trento_ip</h3>
 
 <p>Return the running VM public IP</p>
+
+<h3 id="get_vnet">get_vnet</h3>
+
+<p>Return the output of az network vnet list</p>
+
+<h3 id="get_trento_password">get_trento_password</h3>
+
+<p>Return the password for the Trento WebUI</p>
 
 <h3 id="az_delete_group">az_delete_group</h3>
 
@@ -86,6 +126,30 @@
 
 </dd>
 <dt id="VM_IP_ARG---Public-IP-of-the-remote-machine-where-to-execute-the-command"><b>VM_IP_ARG</b> - Public IP of the remote machine where to execute the command</dt>
+<dd>
+
+</dd>
+</dl>
+
+<h3 id="install_agent">install_agent</h3>
+
+<p>Install trento-agent on all the nodes. Installation is performed using ansible.</p>
+
+<dl>
+
+<dt id="WORK_DIRECTORY---Working-directory-used-to-eventually-download-.rpm"><b>WORK_DIRECTORY</b> - Working directory, used to eventually download .rpm</dt>
+<dd>
+
+</dd>
+<dt id="PLAYBOOK---Playbook-location"><b>PLAYBOOK</b> - Playbook location</dt>
+<dd>
+
+</dd>
+<dt id="API_KEY---Api-key-needed-to-configure-trento-agent"><b>API_KEY</b> - Api key needed to configure trento-agent</dt>
+<dd>
+
+</dd>
+<dt id="PRIVATE_IP---Trento-server-private-IP-used-to-configure-server-url-in-agent"><b>PRIVATE_IP</b> - Trento server private IP, used to configure server-url in agent</dt>
 <dd>
 
 </dd>
@@ -136,6 +200,10 @@
 </dl>
 
 <h3 id="cypress_exec">cypress_exec</h3>
+
+<p>Return the cypress.io version to use. It could be the default one or one fixed by the user using TRENTO_CYPRESS_VERSION</p>
+
+<h3 id="cypress_exec1">cypress_exec</h3>
 
 <p>Execute a cypress command within the container</p>
 
