--- a/qesapdeployment.html
+++ b/qesapdeployment.html
@@ -21,14 +21,19 @@
         <ul>
           <li><a href="#qesap_get_file_paths">qesap_get_file_paths</a></li>
           <li><a href="#qesap_create_folder_tree">qesap_create_folder_tree</a></li>
+          <li><a href="#qesap_get_variables">qesap_get_variables</a></li>
+          <li><a href="#qesap_create_ansible_section">qesap_create_ansible_section</a></li>
           <li><a href="#qesap_pip_install">qesap_pip_install</a></li>
           <li><a href="#qesap_upload_logs">qesap_upload_logs</a></li>
           <li><a href="#qesap_get_deployment_code">qesap_get_deployment_code</a></li>
           <li><a href="#qesap_yaml_replace">qesap_yaml_replace</a></li>
           <li><a href="#qesap_execute">qesap_execute</a></li>
           <li><a href="#qesap_get_inventory">qesap_get_inventory</a></li>
+          <li><a href="#qesap_get_nodes_number">qesap_get_nodes_number</a></li>
+          <li><a href="#qesap_get_terraform_dir">qesap_get_terraform_dir</a></li>
           <li><a href="#qesap_prepare_env">qesap_prepare_env</a></li>
           <li><a href="#qesap_ansible_cmd">qesap_ansible_cmd</a></li>
+          <li><a href="#qesap_ansible_script_output">qesap_ansible_script_output</a></li>
         </ul>
       </li>
     </ul>
@@ -60,6 +65,20 @@
 <h3 id="qesap_create_folder_tree">qesap_create_folder_tree</h3>
 
 <pre><code>    Create all needed folders</code></pre>
+
+<h3 id="qesap_get_variables">qesap_get_variables</h3>
+
+<pre><code>    Scans yaml config for &#39;%OPENQA_VARIABLE%&#39; placeholders and searches for values in OpenQA defined variables.
+    Returns hash with openqa variable key/value pairs.</code></pre>
+
+<h3 id="qesap_create_ansible_section">qesap_create_ansible_section</h3>
+
+<pre><code>    Writes &quot;ansible&quot; section into yaml config file.
+    $args{ansible_section} defines section(key) name.
+    $args{section_content} defines content of names section.
+        Example:
+            @playbook_list = (&quot;pre-cluster.yaml&quot;, &quot;cluster_sbd_prep.yaml&quot;);
+            qesap_create_ansible_section(ansible_section=&gt;&#39;create&#39;, section_content=&gt;\@playbook_list);</code></pre>
 
 <h3 id="qesap_pip_install">qesap_pip_install</h3>
 
@@ -109,6 +128,15 @@
 
 <pre><code>    Return the path of the generated inventory</code></pre>
 
+<h3 id="qesap_get_nodes_number">qesap_get_nodes_number</h3>
+
+<p>Get the number of cluster nodes from the inventory.yaml</p>
+
+<h3 id="qesap_get_terraform_dir">qesap_get_terraform_dir</h3>
+
+<pre><code>    Return the path used by the qesap script as -chdir argument for terraform
+    It is useful if test would like to call terraform</code></pre>
+
 <h3 id="qesap_prepare_env">qesap_prepare_env</h3>
 
 <pre><code>    qesap_prepare_env(variables=&gt;{dict with variables}, provider =&gt; &#39;aws&#39;);
@@ -145,6 +173,44 @@
 
 </dd>
 <dt id="FILTER---filter-hosts-in-the-inventory"><b>FILTER</b> - filter hosts in the inventory</dt>
+<dd>
+
+</dd>
+</dl>
+
+<h3 id="qesap_ansible_script_output">qesap_ansible_script_output</h3>
+
+<pre><code>    Use Ansible to run a command remotely and get the stdout.
+    Command could be executed with elevated privileges
+
+    qesap_ansible_script_output(cmd =&gt; &#39;crm status&#39;, provider =&gt; &#39;aws&#39;, host =&gt; &#39;vmhana01&#39;, root =&gt; 1);
+
+    It uses playbook data/sles4sap/script_output.yaml
+
+    1. ansible-playbook run the playbook
+    2. the playbook executes the command and redirects the output to file, both remotely
+    3. the playbook download the file locally
+    4. the file is read and stored to be returned to the caller</code></pre>
+
+<dl>
+
+<dt id="PROVIDER---Cloud-provider-name-used-to-find-the-inventory1"><b>PROVIDER</b> - Cloud provider name, used to find the inventory</dt>
+<dd>
+
+</dd>
+<dt id="CMD---command-to-run-remotely1"><b>CMD</b> - command to run remotely</dt>
+<dd>
+
+</dd>
+<dt id="HOST---filter-hosts-in-the-inventory"><b>HOST</b> - filter hosts in the inventory</dt>
+<dd>
+
+</dd>
+<dt id="USER---user-on-remote-host-default-to-cloudadmin1"><b>USER</b> - user on remote host, default to &#39;cloudadmin&#39;</dt>
+<dd>
+
+</dd>
+<dt id="ROOT---1-to-enable-remote-execution-with-elevated-user-default-to-0"><b>ROOT</b> - 1 to enable remote execution with elevated user, default to 0</dt>
 <dd>
 
 </dd>
