--- a/sles4sap_publiccloud.html
+++ b/sles4sap_publiccloud.html
@@ -168,7 +168,7 @@ Return 0 if no internal error.</code></pre>
 <pre><code>Stops HANA database using default or specified method.
 &quot;stop&quot; - stops database using &quot;HDB stop&quot; command.
 &quot;kill&quot; - kills database processes using &quot;HDB -kill&quot; command.
-&quot;crash&quot; - crashes entire os using &quot;/proc-sysrq-trigger&quot; method.</code></pre>
+&quot;crash&quot; - crashes entire OS using &quot;/proc/sysrq-trigger&quot; method.</code></pre>
 
 <dl>
 
@@ -375,6 +375,10 @@ in the &quot;ansible: create:&quot; section of config.yaml file.</code></pre>
 
 </dd>
 <dt id="ptf_container---name-of-the-container-for-PTF-files-optional"><b>ptf_container</b> - name of the container for PTF files (optional)</dt>
+<dd>
+
+</dd>
+<dt id="ltss---name-and-reg_code-for-LTSS-extension-to-register.-This-argument-is-a-two-element-comma-separated-list-string.-Like:-SLES-LTSS-Extended-Security-12.5-x86_64-123456789-First-string-before-the-comma-has-to-be-a-valid-SCC-extension-name-later-used-by-Ansible-as-argument-for-SUSEConnect-or-registercloudguest-argument.-Second-string-has-to-be-valid-registration-code-for-the-particular-LTSS-extension"><b>ltss</b> - name and reg_code for LTSS extension to register. This argument is a two element comma separated list string. Like: &#39;SLES-LTSS-Extended-Security/12.5/x86_64,123456789&#39; First string before the comma has to be a valid SCC extension name, later used by Ansible as argument for SUSEConnect or registercloudguest argument. Second string has to be valid registration code for the particular LTSS extension.</dt>
 <dd>
 
 </dd>
