--- a/qesapdeployment.html
+++ b/qesapdeployment.html
@@ -34,7 +34,7 @@
           <li><a href="#qesap_yaml_replace">qesap_yaml_replace</a></li>
           <li><a href="#qesap_execute">qesap_execute</a></li>
           <li><a href="#qesap_execute_conditional_retry">qesap_execute_conditional_retry</a></li>
-          <li><a href="#qesap_file_find_string">qesap_file_find_string</a></li>
+          <li><a href="#qesap_file_find_strings">qesap_file_find_strings</a></li>
           <li><a href="#qesap_get_inventory">qesap_get_inventory</a></li>
           <li><a href="#qesap_get_nodes_number">qesap_get_nodes_number</a></li>
           <li><a href="#qesap_get_nodes_names">qesap_get_nodes_names</a></li>
@@ -52,6 +52,7 @@
           <li><a href="#qesap_remote_hana_public_ips">qesap_remote_hana_public_ips</a></li>
           <li><a href="#qesap_wait_for_ssh">qesap_wait_for_ssh</a></li>
           <li><a href="#qesap_upload_crm_report">qesap_upload_crm_report</a></li>
+          <li><a href="#qesap_upload_supportconfig_logs">qesap_upload_supportconfig_logs</a></li>
           <li><a href="#qesap_cluster_log_cmds">qesap_cluster_log_cmds</a></li>
           <li><a href="#qesap_cluster_logs">qesap_cluster_logs</a></li>
           <li><a href="#qesap_calculate_deployment_name">qesap_calculate_deployment_name</a></li>
@@ -71,7 +72,7 @@
           <li><a href="#qesap_export_instances">qesap_export_instances</a></li>
           <li><a href="#qesap_is_job_finished">qesap_is_job_finished</a></li>
           <li><a href="#qesap_az_get_resource_group">qesap_az_get_resource_group</a></li>
-          <li><a href="#qesap_az_calculate_address_range">qesap_az_calculate_address_range</a></li>
+          <li><a href="#qesap_calculate_address_range">qesap_calculate_address_range</a></li>
           <li><a href="#qesap_az_vnet_peering">qesap_az_vnet_peering</a></li>
           <li><a href="#qesap_az_simple_peering_delete">qesap_az_simple_peering_delete</a></li>
           <li><a href="#qesap_az_vnet_peering_delete">qesap_az_vnet_peering_delete</a></li>
@@ -262,13 +263,13 @@ This function is not expected to internally die, any failure has to be handled b
 
 <pre><code>qesap_execute_conditional_retry(
 cmd =&gt; $qesap_script_cmd,
-error_string =&gt; &#39;Fatal:&#39;,
+error_list =&gt; [&#39;Fatal:&#39;],
 logname =&gt; &#39;somefile.txt&#39;
 [, verbose =&gt; 1s] );
 
 Execute qesap glue script commands. Check project documentation for available options:
 https://github.com/SUSE/qe-sap-deployment
-Test only returns execution result, failure has to be handled by calling method.</code></pre>
+Test returns execution result, or dies in case of terraform apply/destroy failure</code></pre>
 
 <dl>
 
@@ -292,7 +293,7 @@ Test only returns execution result, failure has to be handled by calling method.
 <dd>
 
 </dd>
-<dt id="ERROR_STRING---error-string-to-look-for"><b>ERROR_STRING</b> - error string to look for</dt>
+<dt id="ERROR_LIST---list-of-error-strings-to-search-for-in-the-log-file.-If-any-is-found-it-enables-terraform-retry"><b>ERROR_LIST</b> - list of error strings to search for in the log file. If any is found, it enables terraform retry</dt>
 <dd>
 
 </dd>
@@ -302,10 +303,10 @@ Test only returns execution result, failure has to be handled by calling method.
 </dd>
 </dl>
 
-<h3 id="qesap_file_find_string">qesap_file_find_string</h3>
+<h3 id="qesap_file_find_strings">qesap_file_find_strings</h3>
 
-<pre><code>Search for a string in the Ansible log file.
-Returns 1 if the string is found in the log file, 0 otherwise.</code></pre>
+<pre><code>Search for a list of strings in the Ansible log file.
+Returns 1 if any of the strings are found in the log file, 0 otherwise.</code></pre>
 
 <dl>
 
@@ -313,7 +314,7 @@ Returns 1 if the string is found in the log file, 0 otherwise.</code></pre>
 <dd>
 
 </dd>
-<dt id="SEARCH_STRING---String-to-search-for-in-the-log-file.-Required"><b>SEARCH_STRING</b> - String to search for in the log file. (Required)</dt>
+<dt id="SEARCH_STRINGS---Array-of-strings-to-search-for-in-the-log-file.-Required"><b>SEARCH_STRINGS</b> - Array of strings to search for in the log file. (Required)</dt>
 <dd>
 
 </dd>
@@ -680,6 +681,26 @@ Return total time of retry loop in case of pass.</code></pre>
 </dd>
 </dl>
 
+<h3 id="qesap_upload_supportconfig_logs">qesap_upload_supportconfig_logs</h3>
+
+<pre><code>Genarate supportconfig log on a host and upload the resulting tarball to openqa</code></pre>
+
+<dl>
+
+<dt id="HOST---host-to-get-the-report-from1"><b>HOST</b> - host to get the report from</dt>
+<dd>
+
+</dd>
+<dt id="PROVIDER---Cloud-provider-name-used-to-find-the-inventory5"><b>PROVIDER</b> - Cloud provider name, used to find the inventory</dt>
+<dd>
+
+</dd>
+<dt id="FAILOK---if-not-set-Ansible-failure-result-in-die5"><b>FAILOK</b> - if not set, Ansible failure result in die</dt>
+<dd>
+
+</dd>
+</dl>
+
 <h3 id="qesap_cluster_log_cmds">qesap_cluster_log_cmds</h3>
 
 <pre><code>List of commands to collect logs from a deployed cluster</code></pre>
@@ -939,9 +960,9 @@ In cases of ambiguous responses, they are considered to be in `running` state.</
 </dd>
 </dl>
 
-<h3 id="qesap_az_calculate_address_range">qesap_az_calculate_address_range</h3>
+<h3 id="qesap_calculate_address_range">qesap_calculate_address_range</h3>
 
-<p>Calculate the vnet and subnet address ranges. The format is 10.ip2.ip3.0/21 and /24 respectively. ip2 and ip3 are calculated using the slot number as seed.</p>
+<p>Calculate a main range that can be used in Azure for vnet or in AWS for vpc. Also calculate a secondary range within the main one for Azure subnet address ranges. The format is 10.ip2.ip3.0/21 and /24 respectively. ip2 and ip3 are calculated using the slot number as seed.</p>
 
 <dl>
 
@@ -1176,12 +1197,16 @@ subscription_id - valid azure subscription</code></pre>
 
 <h2 id="qesap_terrafom_ansible_deploy_retry">qesap_terrafom_ansible_deploy_retry</h2>
 
-<pre><code>qesap_terrafom_ansible_deploy_retry( error_log=&gt;$error_log )
-    error_log - ansible error log file name
+<pre><code>    qesap_terrafom_ansible_deploy_retry( error_log=&gt;$error_log )
+        error_log - ansible error log file name
 
-Retry to deploy terraform + ansible
-Return 0: we manage the failure properly
-Return 1: something went wrong or we do not know what to do with the failure</code></pre>
+    Retry to deploy terraform + ansible. This function is only expected to be called if a previous `qesap.py`
+    execution returns a non zero exit code. If this function is called after a successful execution,
+    the qesap_ansible_error_detection will not find anything wrong in the log, wrongly concluding that
+    an unknown error is in the log and skipping the retry and this function will return 1.
+.
+    Return 0: this function manage the failure properly, perform a retry and retry was a successful deployment
+    Return 1: something went wrong or this function does not know what to do with the failure</code></pre>
 
 <dl>
 
@@ -1202,8 +1227,8 @@ Return 1: something went wrong or we do not know what to do with the failure</co
 Inspect the provided Ansible log and search for known issue in the log
 Also provide a nice record_info to summarize the error
 Return:
- - 0: no errors
- - 1: unknown generic error
+ - 0: unable to detect errors
+ - 1: generic fatal error
  - 2: reboot timeout
  - 3: no sudo password</code></pre>
 
@@ -1220,7 +1245,7 @@ Return:
 <pre><code>qesap_test_postfail()
 
 Post fail tasks suitable for post_fail_hook of the test modules.
-This API is mainly designed for qesap regresstion test modules.</code></pre>
+This API is mainly designed for qesap regression test modules.</code></pre>
 
 <dl>
 
