--- a/index.html
+++ b/index.html
@@ -116,12 +116,14 @@ Documentation of libs
 <li><a href=scheduler.html>scheduler.pm</a></li>
 <li><a href=security/config.html>security/config.pm</a></li>
 <li><a href=selenium.html>selenium.pm</a></li>
+<li><a href=selinuxtest.html>selinuxtest.pm</a></li>
 <li><a href=serial_terminal.html>serial_terminal.pm</a></li>
 <li><a href=service_check.html>service_check.pm</a></li>
 <li><a href=sles4sap.html>sles4sap.pm</a></li>
 <li><a href=sles4sap/azure_cli.html>sles4sap/azure_cli.pm</a></li>
 <li><a href=sles4sap/cloud_zypper_patch.html>sles4sap/cloud_zypper_patch.pm</a></li>
 <li><a href=sles4sap/console_redirection.html>sles4sap/console_redirection.pm</a></li>
+<li><a href=sles4sap/console_redirection/redirection_data_tools.html>sles4sap/console_redirection/redirection_data_tools.pm</a></li>
 <li><a href=sles4sap/database_hana.html>sles4sap/database_hana.pm</a></li>
 <li><a href=sles4sap/ibsm.html>sles4sap/ibsm.pm</a></li>
 <li><a href=sles4sap/ipaddr2.html>sles4sap/ipaddr2.pm</a></li>
@@ -150,6 +152,7 @@ Documentation of libs
 <li><a href=version_utils.html>version_utils.pm</a></li>
 <li><a href=virt_autotest/domain_management_utils.html>virt_autotest/domain_management_utils.pm</a></li>
 <li><a href=virt_autotest/utils.html>virt_autotest/utils.pm</a></li>
+<li><a href=virt_autotest/virtual_network_utils.html>virt_autotest/virtual_network_utils.pm</a></li>
 <li><a href=vt_perf_libs.html>vt_perf_libs.pm</a></li>
 <li><a href=web_browser.html>web_browser.pm</a></li>
 <li><a href=wickedbase.html>wickedbase.pm</a></li>
